<resources>
    <string name="app_name">New York Times</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">share</string>
    <string name="refresh">Refresh</string>
    <string name="more">more</string>
    <string name="compose">Compose</string>
    <string name="search">search</string>
</resources>
