<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
          android:title="@string/search"
          android:icon="@drawable/ic_search"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
            android:id="@+id/filter_menu"
            android:icon="@drawable/ic_sort"
            app:showAsAction="always"
            android:title="@string/compose">
    </item>
    <item
            android:id="@+id/more_option_menu"
            android:icon="@drawable/ic_more_event"
            app:showAsAction="ifRoom|withText"
            android:title="@string/more">
        <menu>
            <item
                    android:id="@+id/refresh"
                    android:title="@string/refresh">
            </item>
            <item android:id="@+id/action_share"
                  android:title="@string/share"
                  android:icon="@drawable/ic_share"
                  app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
        </menu>
    </item>

</menu>